--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
+    "express-session": "^1.17.2",
+    "jsonwebtoken": "^8.5.1",
+    "md5": "^2.3.0",
     "method-override": "^3.0.0",
     "mongoose": "^5.12.9",
     "nodemon": "^2.0.7"
