--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "bookreview",
+  "name": "bookbriefs",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npx nodemon server.js",
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -25,10 +25,9 @@
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
     "express-session": "^1.17.2",
-    "jsonwebtoken": "^8.5.1",
     "md5": "^2.3.0",
     "method-override": "^3.0.0",
-    "mongoose": "^5.12.9",
-    "nodemon": "^2.0.7"
+    "mongoose": "^5.12.9"
+    
   }
 }
